# VP

./: CMakeLists.txt  LICENSE  a.out  main.cpp  запуск программы в терминале.txt
Auth/: AuthSystem.cpp  AuthSystem.h
Models/Admin/: Admin.cpp  Admin.h
Models/RegularUser/: RegularUser.h
Models/User/: RegularUser.cpp  RegularUser.h  User.cpp  User.h
menu/: CMenu.cpp  CMenu.h  CMenuItem.cpp  CMenuItem.h
